# gt_llm_evaluator

./: .env.sample  .gitignore  README.md  pyproject.toml
.deepeval/: .deepeval  .deepeval_telemetry.txt
.github/: daily-eval.yml
.github/workflows/: daily-eval.yml
mock_data/: simulated_conversations.csv
scripts/: nightly_report.py  pre_merge_check.py  simulate_convo.py
scripts/chatbot/: convo_eval.py  nightly_report.py  pre_merge_check.py  simulate_convo.py
scripts/faq_generator/: faq_eval.py
src/core/: drive_client.py  evaluator.py  reporter.py  test_case_builder.py
src/evaluator_service/: __main__.py  drive_client.py  evaluator.py  kustomer_client.py  pre_merge_check.py  reporter.py  test_case_builder.py
