[project]
name = "chatbot_evaluator_service"
version = "0.1.0"
description = "Modular service for static LLM evaluation of customer conversations."
requires-python = ">=3.12"
dependencies = [
    "deepeval>=3.0.0",
    "deepteam>=0.0.9",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.0",
    "python-dotenv>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"] 